--- a/css/main.css
+++ b/css/main.css
@@ -180,6 +180,11 @@ body {
     }
 }
 
+ul.header_lists {
+    display: flex;
+    align-items: center;
+    gap: 18px;
+}
 
 /* HERO */
 .hero_wrapper {
@@ -239,8 +244,40 @@ body {
 }
 
 .hero_description {
-    margin-bottom: 40px;
+    margin-bottom: 15px;
     width: 38ch;
+}
+
+.hero_details {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+    margin-bottom: 40px;
+}
+
+.hero_details p {
+    margin: 0;
+}
+
+.hero_details span {
+    width: 10px;
+    height: 10px;
+    background-color: whitesmoke;
+    border-radius: 100%;
+    animation-name: glow;
+    animation-duration: 750ms;
+    animation-timing-function: ease-in-out;
+    animation-iteration-count: infinite;
+}
+
+@keyframes glow {
+    0% {
+        background: hsl(153, 71%, 59%);
+    }
+
+    100% {
+        background: hsl(0, 84%, 58%);
+    }
 }
 
 .header_name {
